--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Hello i am mohammad</h1> 
-   <p>this is my first website i hope to make one much better tham this</p>
+   <p>this is my first website i hope to make one much better than this</p>
    <h2>about me</h2>
    <p>i like computer science my favorite teacher is mr Essa and favorite TA mr Ali because they work very hard to help us</p>
    <h2>my hobbies</h2>
